kubernetes/apps/kguardian/kguardian/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kguardian
spec:
  hostnames:
    - kguardian.${SECRET_DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: networking
  rules:
    - backendRefs:
        - name: kguardian-frontend
          namespace: kguardian
          port: 5173
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Network Flow Monitoring
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: kguardian.png
    gethomepage.dev/name: KGuardian
